apps/immich/immich-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
  hostnames:
    - immich.6j0.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "0s"
        backendRequest: "0s"
      backendRefs:
        - name: immich-server
          port: 2283
